objects/ASI_CRM_Item_Group_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Allocation_Quantity_Bottle__c</fullName>
        <formula>IF(TEXT( ASI_CRM_UOM__c ) == &quot;CA&quot;, ASI_CRM_Allocation_Quantity__c * ASI_CRM_Item_Group__r.ASI_CRM_CN_Pack_Value__c, ASI_CRM_Allocation_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Quantity(Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allocation_Quantity__c</fullName>
        <label>Allocation Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cut Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Item Group Allocations</relationshipLabel>
        <relationshipName>Item_Group_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MTD_Order_Quantity_CA__c</fullName>
        <formula>ASI_CRM_MTD_Order_Quantity__c / ASI_CRM_Item_Group__r.ASI_CRM_CN_Pack_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Order Quantity(CA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MTD_Order_Quantity__c</fullName>
        <label>MTD Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Item Group Allocations</relationshipLabel>
        <relationshipName>Item_Group_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remaining_Qty_BT__c</fullName>
        <formula>ASI_CRM_Allocation_Quantity_Bottle__c -  ASI_CRM_MTD_Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Qty(Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remaining_Qty_CA__c</fullName>
        <formula>( ASI_CRM_Allocation_Quantity_Bottle__c / ASI_CRM_Item_Group__r.ASI_CRM_CN_Pack_Value__c ) -  ASI_CRM_MTD_Order_Quantity_CA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Qty(Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item Group Allocation</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Allocation</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Allocation_Quantity__c</columns>
        <columns>ASI_CRM_Allocation_Quantity_Bottle__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity_CA__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Remaining_Qty_BT__c</columns>
        <columns>ASI_CRM_Remaining_Qty_CA__c</columns>
        <columns>ASI_CRM_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Item_Group_Allocation__c.ASI_CRM_CN_Item_Group_Allocation</value>
        </filters>
        <label>All CN Allocation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Allocation_Quantity__c</columns>
        <columns>ASI_CRM_Allocation_Quantity_Bottle__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity_CA__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_UOM__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Item_Group_Allocation__c.ASI_CRM_CN_Item_Group_Allocation</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_Allocation_2018_6_1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Allocation_Quantity__c</columns>
        <columns>ASI_CRM_Allocation_Quantity_Bottle__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity__c</columns>
        <columns>ASI_CRM_MTD_Order_Quantity_CA__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Remaining_Qty_BT__c</columns>
        <columns>ASI_CRM_Remaining_Qty_CA__c</columns>
        <columns>ASI_CRM_UOM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Item_Group_Allocation__c.ASI_CRM_CN_Item_Group_Allocation</value>
        </filters>
        <filters>
            <field>ASI_CRM_Effective_Date__c</field>
            <operation>equals</operation>
            <value>6/1/2018</value>
        </filters>
        <filters>
            <field>ASI_CRM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All CN Allocation 2018.6.1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IGA-{MM}{YY}{0000}</displayFormat>
        <label>Item Group Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Group Allocations</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Item_Group_Allocation</fullName>
        <active>true</active>
        <label>CN Item Group Allocation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>